Prevent loading content to be stuck to the top bar

--- a/src/browser_action/css/_search.scss
+++ b/src/browser_action/css/_search.scss
@@ -98,7 +98,7 @@
 }
 
 #loading-placeholder {
-  padding: 0 24px 24px;
+  padding: 1px 24px 24px;
 
   .background-masker {
     animation-duration: 2s;
